# cryptography-n-zk-research

./: .gitmodules  Cargo.toml  README.md
arks/: README.md
arks/groth16/: README.md
arks/snarks/succinct_gkr_protocol/: Cargo.toml
arks/snarks/succinct_gkr_protocol/benches/: gkr_succinct_protocol_benchmark.rs
arks/snarks/succinct_gkr_protocol/src/: interfaces.rs  lib.rs
arks/succinct_gkr_protocol/: Cargo.toml
arks/succinct_protocol/: Cargo.toml
bls-multi-sign-threshold-wallet/: Cargo.toml  README.md
bls-multi-sign-threshold-wallet/src/: main.rs
circom-groth16/: README.md
circom-groth16/src/: main.rs
circuits/: Cargo.toml  README.md
circuits/src/: arithmetic.rs  interfaces.rs  lib.rs  primitives.rs  utils.rs
digitial-signatures/: README.md
digitial-signatures/ecdsa-rust/: Cargo.toml  README.md
digitial-signatures/ecdsa-rust/ec-core/: Cargo.toml
digitial-signatures/ecdsa-rust/ec-core/src/: elliptic_curve.rs  finite_fields.rs  lib.rs
digitial-signatures/ecdsa-rust/ecdsa/: Cargo.toml
digitial-signatures/ecdsa-rust/ecdsa/src/: ecdsa.rs  lib.rs
digitial-signatures/schnorr/: README.md
digitial-signatures/simple-lean-sig/: Cargo.toml
digitial-signatures/winternitz-ots/: Cargo.toml  POSEIDON2.md
digitial-signatures/xmss-sha256/: Cargo.toml
exps/eff-mle/: Cargo.toml
exps/eff-mle/benches/: mle_bench.rs
exps/eff-mle/src/: direct.rs  lib.rs  ron.rs
fiat_shamir/: Cargo.toml  README.md
fiat_shamir/src/: interface.rs  lib.rs
frontends/: README.md
frontends/plonky3/range_check/: Cargo.toml
frontends/plonky3/range_check/src/: main.rs
gkr/: Cargo.toml  README.md
gkr/benches/: gkr_protocol_benchmark.rs  gkr_succinct_protocol_benchmark.rs
gkr/src/: circuit.rs  interfaces.rs  lib.rs  primitives.rs  protocol.rs  succinct_protocol.rs  utils.rs
groth16/: Cargo.toml  README.md  poc.py  requirements.txt
groth16/src/: interfaces.rs  lib.rs  preprocessing.rs  primitives.rs  protocol.rs  trusted_setup.rs  utils.rs
hash-functions/: README.md
hash-functions/keccak256/: Cargo.toml  README.md
hash-functions/sha256-hash-function/: Cargo.toml
iops/gkr/: Cargo.toml  README.md
iops/gkr/benches/: gkr_protocol_benchmark.rs
iops/gkr/src/: primitives.rs  protocol.rs  utils.rs
iops/libra/: Cargo.toml  LINEAR_TIME_SUMCHECK_BENCH_INSIGHT.md  README.md
iops/libra/benches/: sumcheck_benchmarks.rs  sumcheck_benchmarks_plots.rs
iops/libra/benchmark_results/: README.md  sumcheck_comparison.md
iops/libra/src/: algos.rs  lib.rs  libra.rs  lt_sumcheck.rs  utils.rs
iops/libra/src/libra/: mod.rs  primitives.rs
iops/product_check/: Cargo.toml  README.md
iops/product_check/src/: interface.rs  lib.rs  primitives.rs  utils.rs
iops/sum_check/: Cargo.toml  README.md
iops/sum_check/benches/: sum_check_benchmark.rs
iops/sum_check/src/: data_structure.rs  interface.rs  lib.rs  prover.rs  verifier.rs
iops/sum_check/src/composed/: mod.rs  multicomposed.rs  prover.rs  utils.rs  verifier.rs
iops/sum_check/src/virtual_poly/: README.md  mod.rs  prover.rs  verifier.rs
iops/sumcheck201playground/: Cargo.toml  README.md
iops/zero_check/: Cargo.toml  README.md
kzg-rust/src/: lib.rs  primitives.rs
pcs/: Cargo.toml  README.md
pcs/benches/: kzg_multilinear_pcs_benchmark.rs  kzg_pcs_benchmark.rs
pcs/fri/: Cargo.toml
pcs/kzg-rust/benches/: kzg_multilinear_pcs_benchmark.rs
pcs/kzg-rust/src/: lib.rs  utils.rs
pcs/src/: lib.rs  utils.rs
pcs/src/fri/: mod.rs
pcs/src/kzg/: README.md
pcs/src/kzg/univariate/: batch.rs
playground/: Cargo.toml
plonk/: README.md
plonk/compiler/: Cargo.toml
plonk/protocol/: Cargo.toml
polynomial/: Cargo.toml
polynomial-commitment-schemes/kzg-rust/: Cargo.toml
polynomial-commitment-schemes/kzg-rust/benches/: kzg_multilinear_pcs_benchmark.rs  kzg_pcs_benchmark.rs
polynomial-commitment-schemes/kzg-rust/src/: interface.rs  lib.rs  multilinear.rs  primitives.rs  univariate.rs  utils.rs
polynomial-commitment-schemes/kzg-rust/src/univariate/: batch.rs  mod.rs
polynomial/src/: interface.rs  lib.rs  multilinear.rs  multivariate.rs  univariant.rs  utils.rs
primitives/: README.md
primitives/m_tree/: Cargo.toml
primitives/mpt/: Cargo.toml
primitives/mpt/src/: lib.rs  main.rs  mpt_core.rs  utils.rs
primitives/polynomial/: Cargo.toml  README.md
projects/circom-groth16/: Cargo.toml
projects/circom-groth16/src/: main.rs
projects/kzg-airdrop-bn254/: .gitignore  README.md
projects/light-tornodo-cash/: deposit.r1cs  deposit.sym
projects/non-interactive-chaum-pedersen-lib/: Cargo.toml  README.md
projects/vrf-rust-solidity/: README.md
projects/vrf-rust-solidity/oracle/oracle/: Cargo.toml
projects/vrf-rust-solidity/oracle/oracle/src/: main.rs
schnorr/: Cargo.toml
schnorr/src/: core.rs  lib.rs
sha256-hash-function/: README.md
sha256-hash-function/src/: constants.rs  functions.rs  interface.rs  (+2 more)
succinct-gkr/: Cargo.toml
sum_check/: Cargo.toml  README.md
sum_check/src/: data_structure.rs  interface.rs  lib.rs  prover.rs  verifier.rs
sum_check/src/composed/: mod.rs  multicomposed.rs  prover.rs  utils.rs  verifier.rs
zk_vms/: README.md
zk_vms_frameworks/: README.md
zk_vms_frameworks/ere/: Cargo.toml
zk_vms_frameworks/ere-dockerized/: Cargo.toml
zk_vms_frameworks/ere-dockerized/guest-programs/sp1-fib/: Cargo.toml  sp1-program.elf
zk_vms_frameworks/ere-dockerized/guest-programs/sp1-fib/src/: main.rs
zk_vms_frameworks/ere-dockerized/guest-programs/sp1-state-validation/: Cargo.toml  sp1-program.elf
zk_vms_frameworks/ere-dockerized/guest-programs/sp1-state-validation/src/: main.rs
zk_vms_frameworks/ere-dockerized/src/: main.rs
zk_vms_frameworks/ere/guest-programs/sp1/: Cargo.toml
zk_vms_frameworks/ere/guest-programs/sp1-fib/: sp1-program.elf
zk_vms_frameworks/ere/src/: main.rs
zk_vms_frameworks/misc/exec-block/: Cargo.toml
zk_vms_frameworks/misc/exec-block/.cargo/: config.toml
zk_vms_frameworks/misc/exec-block/src/: main.rs
zk_vms_frameworks/zisk/exec_eth_block/: Cargo.toml  README.md  build.rs
zk_vms_frameworks/zisk/exec_eth_block/src/: main.rs
(+182 files in other folders)
