[workspace]
members = [
    "primitives/polynomial",
    "projects/bls-multi-sign-threshold-wallet", 
    "primitives/transcripts/fiat_shamir", 
    "iops/sum_check", 
    "hash-functions/sha256-hash-function",
    "iops/gkr", 
    "primitives/circuits", 
    "arks/groth16", 
    "pcs/kzg-rust", 
    "arks/plonk/compiler", 
    "arks/plonk/protocol", 
    "arks/plonk/core", 
    "primitives/transcripts/merlin", 
    "arks/succinct_gkr_protocol", 
    "hash-functions/keccak256",
]
exclude = [
    "circom-groth16",
]


[workspace.dependencies]
polynomial = { path = "primitives/polynomial" }
circuits = { path = "primitives/circuits" }
ark-std = "0.4.0"
rand = "0.8.5"
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main"}
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-test-curves = {version = "0.4.2", features = ["bls12_381_scalar_field", "bls12_381_curve", "ed_on_bls12_381", "secp256k1"]}
hex-literal = "0.4.1"
fiat_shamir = {path = "primitives/transcripts/fiat_shamir"}
sum_check = {path = "iops/sum_check"}
kzg-rust = {path = "pcs/kzg-rust"}
ark-serialize = "0.4.2"
digest = "0.10.7"
plonk_protocol = { path = "arks/plonk/protocol" }
plonk_core = { path = "arks/plonk/core" }
plonk_compiler = { path = "arks/plonk/compiler" }
gkr = {path = "iops/gkr"}
