[workspace]
members = [
    "primitives/polynomial",
    "projects/bls-multi-sign-threshold-wallet", 
    "primitives/transcripts/fiat_shamir", 
    "iops/sum_check", 
    "hash-functions/sha256-hash-function",
    "iops/gkr", 
    "primitives/circuits", 
    "arks/snarks/groth16", 
    "pcs", 
    "arks/snarks/plonk/compiler", 
    "arks/snarks/plonk/protocol", 
    "arks/snarks/plonk/core", 
    "primitives/transcripts/merlin", 
    "arks/snarks/succinct_gkr_protocol", 
    "hash-functions/keccak256",
    "iops/zero_check", 
    "iops/product_check", "iops/sumcheck201playground", "primitives/mpt", "iops/libra", ]
    
    
exclude = [
    "circom-groth16",
    "frontends/halo2/do_nothing",
    "frontends/plonky3/range_check",
    "frontends/expander/example",
    "frontends/expander/dump",
    "zk_vms/toy","zk_vms/sp1_evm_contract_ex"
]


[workspace.dependencies]
# source (workspace)
polynomial = { path = "primitives/polynomial" }
circuits = { path = "primitives/circuits" }
fiat_shamir = {path = "primitives/transcripts/fiat_shamir"}
sum_check = {path = "iops/sum_check"}
plonk_protocol = { path = "arks/snarks/plonk/protocol" }
plonk_core = { path = "arks/snarks/plonk/core" }
plonk_compiler = { path = "arks/snarks/plonk/compiler" }
zero_check = {path = "iops/zero_check"}
product_check = {path = "iops/product_check"}
pcs = {path = "pcs"}
gkr = {path = "iops/gkr"}


# arkworks
ark-std = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-test-curves = {version = "0.4.2", features = ["bls12_381_scalar_field", "bls12_381_curve", "ed_on_bls12_381", "secp256k1"]}
ark-serialize = "0.4.2"


# misc 
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main"}
rand = "0.8.5"
hex-literal = "0.4.1"
digest = "0.10.7"
anyhow = "1.0.97"
rayon = "1.10.0"