[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-test-curves = {version = "0.4.2", features = ["bls12_381_scalar_field", "bls12_381_curve", "ed_on_bls12_381"]}
polynomial = {path = "../polynomial"}
fiat_shamir = {path = "../fiat_shamir"}
sum_check = {path = "../sum_check"}
circuits = {path = "../circuits"}
kzg-rust = {path = "../polynomial-commitment-schemes/kzg-rust"}
ark-std.workspace = true
field-tracker.workspace = true

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "gkr_protocol_benchmark"
harness = false

[[bench]]
name = "gkr_succinct_protocol_benchmark"
harness = false