[package]
name = "pcs" # polynomial commitment scheme
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-bls12-381.workspace = true
ark-test-curves.workspace = true
polynomial.workspace = true
circuits.workspace = true
rand.workspace = true



[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "kzg_pcs_benchmark"
harness = false

[[bench]]
name = "kzg_multilinear_pcs_benchmark"
harness = false