[package]
name = "sum_check"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4.2"
ark-test-curves = {version = "0.4.2", features = ["bls12_381_scalar_field", "bls12_381_curve", "ed_on_bls12_381"]}
polynomial = {path = "../polynomial"}
fiat_shamir = {path = "../fiat_shamir"}




[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "sum_check_benchmark"
harness = false

