[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-test-curves.workspace = true
polynomial.workspace = true
fiat_shamir.workspace = true
sum_check.workspace = true
circuits.workspace = true
pcs.workspace = true
ark-std.workspace = true
field-tracker.workspace = true

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "gkr_protocol_benchmark"
harness = false