[package]
name = "product_check"
version = "0.1.0"
edition = "2024"

[dependencies]
sum_check.workspace = true
fiat_shamir.workspace = true
anyhow.workspace = true
ark-ff.workspace = true
ark-test-curves.workspace = true
ark-serialize.workspace = true
polynomial.workspace = true
zero_check.workspace = true
ark-ec.workspace = true
pcs.workspace = true