[package]
name = "sum_check"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff.workspace = true
ark-test-curves.workspace = true
polynomial.workspace = true
fiat_shamir.workspace = true
anyhow.workspace = true
ark-std.workspace = true
rayon = { version = "1.5.2" }
sumcheck201playground = { path = "../sumcheck201playground" }


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "sum_check_benchmark"
harness = false

