[package]
name = "circom-groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
groth16 = {path = "../groth16"}
ark-circom = { git = "https://github.com/developeruche/circom-compat.git"}
ark-ff = { version = "0.4.2", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "=0.4.0" }