[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
tokio = { version = "1.32", features = ["sync", "rt-multi-thread", "macros"] }